gcc/testsuite/gdc.test/compilable/test313b.d
// REQUIRED_ARGS: -de
void test1()
{
    import core.stdc.stdio;
    core.stdc.stdio.printf("");
}
